# VSCode

C#/: Program.cs  test.cs
C++/: 1.c  1.cpp  10for.cpp  11while.cpp  12char.cpp  13waiting.cpp  14range-based.cpp  15cin.cpp  16cin-1.cpp  17cin-2.cpp  18cin-3.cpp  19.cpp  2.cpp  20IO-2.cpp  20IO.cpp  21protos.cpp  22arrfun3.cpp  23strgfun.cpp  24strgback.cpp  25travel.cpp  26atrctfun.cpp  27strctptr.cpp  28arrobj.cpp  29recur.cpp  3.cpp  30ruler.cpp  31fun_prt.cpp  32arfupt.cpp  33inline.cpp  34firstref.cpp  35strtref.cpp  36filefunc.cpp  37left.cpp  38leftover.cpp  39funtemp.cpp  4.cpp  40twotemps.cpp  41twoswap.cpp  42temptempover.cpp  43choices.cpp  (+7 more)
C++/file/: 43file1.cpp  43file2.cpp  CMakeLists.txt
C++/file2/: 44external.cpp  44support.cpp
C++/stock00/: stock00.h
Chrome-plugin-test/: manifest.json
Chrome-test/: manifest.json  popup.html
GAME/: 1.HTML  Snake.c
JS/: 1.js  2.js  3.js  4.js
NewC#/: NewC#.csproj  NewClass.cs  NewClass123.cs  NewClass419.cs  test.cs
NewC#/medidata.mauth.core/5.0.0/: .nupkg.metadata  .signature.p7s  medidata.mauth.core.5.0.0.nupkg  medidata.mauth.core.5.0.0.nupkg.sha512  medidata.mauth.core.nuspec
NewC#/medidata.mauth.core/5.0.0/lib/netstandard2.0/: Medidata.MAuth.Core.xml
NewC#/medidata.mauth.owin/5.0.0/: .nupkg.metadata  .signature.p7s  medidata.mauth.owin.5.0.0.nupkg  medidata.mauth.owin.5.0.0.nupkg.sha512  medidata.mauth.owin.nuspec
NewC#/medidata.mauth.owin/5.0.0/lib/net461/: Medidata.MAuth.Owin.xml
Vue/: 1.html
bouncing-balls-start/: main.js
